[package]
name = "sqlite-y-crdt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite-loadable = "0.0.5"
yrs = "0.16.10"
serde_json = "1.0.99"
lib0 = "0.16.10"
rand = "0.8.5"

[lib]
crate-type=["cdylib"]
